--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "gitsmartcommit"
-version = "0.1.0"
+name = "smart-committer"
+version = "0.1.1"
 description = "Smart commit message generator from git diff"
 readme = "README.md"
 requires-python = ">=3.6"
 
 [project.scripts]
-smartcommit = "gitsmartcommit.git:main"
+quickcommit = "gitsmartcommit.git:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
