--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "smart-committer"
-version = "0.1.1"
+version = "0.1.3"
 description = "Smart commit message generator from git diff"
 readme = "README.md"
 requires-python = ">=3.6"
+authors = [
+    {name = "ABHINAVSS", email = "abhinavssabhi123@gmail.com"}
+]
+license = {text = "MIT"}
+
+[project.urls]
+Homepage = "https://github.com/ABHINAVSSABHIGIT/gitsmartcommit"
+Issues = "https://github.com/ABHINAVSSABHIGIT/gitsmartcommit/issues"
 
 [project.scripts]
 quickcommit = "gitsmartcommit.git:main"
